workloads/test/fleetman/fleetman-api-gateway-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: test
spec:
  selector:
    matchLabels:
      app: api-gateway
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: ianmward/istio-fleetman-api-gateway:6
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
