workloads/test/fleetman/fleetman-position-tracker-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-tracker
  namespace: test
spec:
  selector:
    matchLabels:
      app: position-tracker
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: position-tracker
    spec:
      containers:
      - name: position-tracker
        image: ianmward/istio-fleetman-position-tracker:6
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
