workloads/test/fleetman/fleetman-webapp-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: test
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/istio-fleetman-webapp-angular:6
        imagePullPolicy: Always
