workloads/test/fleetman/fleetman-api-gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
  namespace: test
  labels:
    app: api-gateway
    service: fleetman-api-gateway
spec:
  selector:
    app: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: NodePort
