workloads/test/fleetman/fleetman-position-tracker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
  namespace: test
  labels:
    app: position-tracker
    service: fleetman-position-tracker
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: position-tracker
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: NodePort
