workloads/test/fleetman/fleetman-staff-service-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service
  namespace: test
spec:
  selector:
    matchLabels:
      app: staff-service
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: staff-service
    spec:
      containers:
      - name: staff-service
        image: ianmward/istio-fleetman-staff-service:6
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-staff-service
  namespace: test
  labels:
    app: staff-service
    service: fleetman-staff-service
spec:
  selector:
    app: staff-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: NodePort
