workloads/test/fleetman/fleetman-staff-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-staff-service
  namespace: test
  labels:
    app: staff-service
    service: fleetman-staff-service
spec:
  selector:
    app: staff-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: NodePort
