workloads/test/fleetman/fleetman-vehicle-telemetry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-vehicle-telemetry
  namespace: test
  labels:
    app: vehicle-telemetry
    service: fleetman-vehicle-telemetry
spec:
  selector:
    app: vehicle-telemetry
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: NodePort
