workloads/test/fleetman/fleetman-webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
  namespace: test
  labels:
    app: webapp
    service: fleetman-webapp
spec:
  # This defines which pods are going to be represented by this Service
  # The service becomes a network endpoint for either other services
  # or maybe external users to connect to (eg browser)
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
