workloads/test/fleetman/fleetman-webapp-ing.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: fleetman-ingress
  namespace: test
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app: webapp
    service: fleetman-webapp
spec:
  tls:
    - hosts:
        - fleetman-test.aks.au-poc.com
      secretName: fleetman-test-tls-secret
  rules:
    - host: fleetman-test.aks.au-poc.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
